--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <h3>Don't Laugh Challenge</h3>
+        <div id="joke" class="joke">
+            //joke here
+        </div>
+        <button id="jokeBtn" class="btn">Get Another Joke</button>
+    </div>
 
 
 
